--- a/domestic.html
+++ b/domestic.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="utf-8" />
-  <title></title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title></title>
 </head>
 <body>
+	<header>
+		<ul>
+			<li><a href="">Assistance</a></li>
+			<li><a href="">About Us</a></li>
+			<li><a href="">Get Involved</a></li>
+			<li><a href="">Blog</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</header>	
 	<h1> Crossroads: Addiction Recovery Assistance </h1>
 	
-		<h3>Every heart deserves to be free from violence.</h3>
+	<h3>Every heart deserves to be free from violence.</h3>
 	<p>At <em>New Hearts Recovery Network</em> we realize that domestic violence* can happen to anyone despite race, age, or gender. We help children and adults who are abused and provide resources for domestic violence.</p>
 	<p>Battered men and women typically overlook, deny, or excuse domestic violence especially when it is psychological over physical. Acknowledging the signs of an abusive relationship is the first step out of denial and ending the abuse.</p>
 	<p><span style="color: #ff0000;">Donate</span> today to&nbsp;help those&nbsp;suffering from physical, emotional, and sexual abuse.</p>
