--- a/addiction.html
+++ b/addiction.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="utf-8" />
-  <title></title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title></title>
 </head>
 <body>
+	<header>
+		<ul>
+			<li><a href="">Assistance</a></li>
+			<li><a href="">About Us</a></li>
+			<li><a href="">Get Involved</a></li>
+			<li><a href="">Blog</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</header>
 	<h1> Crossroads: Addiction Recovery Assistance </h1>
 	  	
 	<h3>At <i>New Hearts Recovery Network</i> we realize that substance abuse and alcoholism* have reached epidemic proportions. We help&nbsp;adult and adolescents receive addiction recovery assistance and resources.</h3>
