--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="utf-8" />
-  <title></title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title></title>
 </head>
 <body>
-		<h1>Blog</h1>
+	<header>
+		<ul>
+			<li><a href="">Assistance</a></li>
+			<li><a href="">About Us</a></li>
+			<li><a href="">Get Involved</a></li>
+			<li><a href="">Blog</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</header>		
+	<h1>Blog</h1>
 
 </body>
 </html>
