--- a/addiction.html
+++ b/addiction.html
@@ -3,12 +3,17 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans|Ubuntu" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 
-	<title></title>
+	<title>Crossroads: Addiction Recovery Assistance</title>
 </head>
 <body>
 	<header>
-		<ul>
+		<h1>New Hearts Recovery Network </h1>
+		<button>Get Help</button>
+		<button>Donate</button>
+		<ul class="nav">
 			<li><a href="">Assistance</a></li>
 			<li><a href="">About Us</a></li>
 			<li><a href="">Get Involved</a></li>
@@ -21,6 +26,40 @@
 	<h3>At <i>New Hearts Recovery Network</i> we realize that substance abuse and alcoholism* have reached epidemic proportions. We help&nbsp;adult and adolescents receive addiction recovery assistance and resources.</h3>
 	<p>Addiction continues to destroy individual and families’ lives and resources for receiving treatment continue to be limited.&nbsp;According to the <a href="http://www.cdc.gov/drugoverdose/epidemic/" target="_blank">CDC</a>, 78 Americans die every day from an opioid overdose. Our outreach team is available to help,&nbsp;and&nbsp;can be a support system to those that are suffering.</p>
 	<p>*<em>From the year 2000 to 2014 nearly <a href="http://www.cdc.gov/drugoverdose/epidemic/" target="_blank">half a million</a> people have died from drug overdoses.&nbsp; According to the Substance Abuse and Mental Health Services Administration (<a href="http://www.samhsa.gov/data/sites/default/files/NSDUHresultsPDFWHTML2013/Web/NSDUHresults2013.htm#3.1.2" target="_blank">SAMHSA</a>), 23.5 million Americans are addicted to alcohol and drugs, that’s approximately 1&nbsp;in every 10 Americans over the age of&nbsp;12.</em></p>
+
+	<form action="" method="post">
+		<p>
+			<label>
+				Name* <br/>
+				<input type="text"/>
+			</label>
+		</p>	
+
+		<p>
+			<label>
+				Email* <br/>
+				<input type="email"/>
+			</label>
+		</p>	
+
+		<p>
+			<label>
+				Message <br/>
+				<textarea></textarea>
+			</label>
+		</p>
+		<p>
+			<button>Submit</button>	
+		</p>
+	</form>
+
+	<footer><h3>Contact</h3>
+		<p>17011 Beach Blvd, Suite 900
+		Huntington Beach, Ca 92647
+		(866) - 991 - 3182</p>
+		<h3>Learn More</h3>
+		<p>Download PDF</p>
+	</footer>
 
 </body>
 </html>
