--- a/domestic.html
+++ b/domestic.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title></title>
+	<title>Crossroads: Addiction Recovery Assistance</title>
 </head>
 <body>
 	<header>
